lab/lab6/parser.output
Rules useless in parser due to conflicts

   11 @6: ε


State 26 conflicts: 12 reduce/reduce


Grammar

    0 $accept: prog $end

    1 @1: ε

    2 prog: @1 declist

    3 declist: decl
    4        | declist _M_1 decl

    5 @2: ε

    6 decl: basic _M_1 @2 varlist SEMICOLON

    7 @3: ε

    8 @4: ε

    9 @5: ε

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width @4 @5 varlist SEMICOLON

   11 @6: ε

   12 decl: STRUCT ID LBRACE _st_push @6 declist RBRACE _width SEMICOLON

   13 @7: ε

   14 @8: ε

   15 decl: STRUCT ID @7 @8 varlist SEMICOLON

   16 basic: VOID
   17      | UCHR
   18      | CHR
   19      | USRT
   20      | SRT
   21      | ULNG
   22      | LNG
   23      | UINT
   24      | INT
   25      | FLT
   26      | DBL

   27 @9: ε

   28 @10: ε

   29 varlist: varlist COMMA @9 @10 var
   30        | var

   31 @11: ε

   32 @12: ε

   33 var: DEREF @11 @12 var

   34 @13: ε

   35 var: ID @13 dim

   36 @14: ε

   37 dim: LPN NUM RPN @14 dim
   38    | ε

   39 _st_push: ε

   40 _width: ε

   41 _M_1: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <num> (258) 37
    VOID <str> (259) 16
    UCHR <str> (260) 17
    CHR <str> (261) 18
    SRT <str> (262) 20
    USRT <str> (263) 19
    LNG <str> (264) 22
    ULNG <str> (265) 21
    UINT <str> (266) 23
    INT <str> (267) 24
    FLT <str> (268) 25
    DBL <str> (269) 26
    ID <str> (270) 10 12 15 35
    STRUCT <str> (271) 10 12 15
    SEMICOLON <chr> (272) 6 10 12 15
    LPN <chr> (273) 37
    RPN <chr> (274) 37
    COMMA <chr> (275) 29
    DEREF <chr> (276) 33
    LBRACE <chr> (277) 10 12
    RBRACE <chr> (278) 10 12


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    prog <type_index> (25)
        on left: 2
        on right: 0
    @1 <sym_index> (26)
        on left: 1
        on right: 2
    declist <type_index> (27)
        on left: 3 4
        on right: 2 4 10 12
    decl <type_index> (28)
        on left: 6 10 12 15
        on right: 3 4
    @2 <type_index> (29)
        on left: 5
        on right: 6
    @3 <sym_index> (30)
        on left: 7
        on right: 10
    @4 <sym_index> (31)
        on left: 8
        on right: 10
    @5 <type_index> (32)
        on left: 9
        on right: 10
    @6 <sym_index> (33)
        on left: 11
        on right: 12
    @7 <sym_index> (34)
        on left: 13
        on right: 15
    @8 <type_index> (35)
        on left: 14
        on right: 15
    basic <type_index> (36)
        on left: 16 17 18 19 20 21 22 23 24 25 26
        on right: 6
    varlist <type_index> (37)
        on left: 29 30
        on right: 6 10 15 29
    @9 <sym_index> (38)
        on left: 27
        on right: 29
    @10 <type_index> (39)
        on left: 28
        on right: 29
    var (40)
        on left: 33 35
        on right: 29 30 33
    @11 <sym_index> (41)
        on left: 31
        on right: 33
    @12 <type_index> (42)
        on left: 32
        on right: 33
    @13 <type_index> (43)
        on left: 34
        on right: 35
    dim <type_index> (44)
        on left: 37 38
        on right: 35 37
    @14 <type_index> (45)
        on left: 36
        on right: 37
    _st_push <type_index> (46)
        on left: 39
        on right: 10 12
    _width <magic> (47)
        on left: 40
        on right: 10 12
    _M_1 <sym_index> (48)
        on left: 41
        on right: 4 6


State 0

    0 $accept: • prog $end

    $default  reduce using rule 1 (@1)

    prog  go to state 1
    @1    go to state 2


State 1

    0 $accept: prog • $end

    $end  shift, and go to state 3


State 2

    2 prog: @1 • declist

    VOID    shift, and go to state 4
    UCHR    shift, and go to state 5
    CHR     shift, and go to state 6
    SRT     shift, and go to state 7
    USRT    shift, and go to state 8
    LNG     shift, and go to state 9
    ULNG    shift, and go to state 10
    UINT    shift, and go to state 11
    INT     shift, and go to state 12
    FLT     shift, and go to state 13
    DBL     shift, and go to state 14
    STRUCT  shift, and go to state 15

    declist  go to state 16
    decl     go to state 17
    basic    go to state 18


State 3

    0 $accept: prog $end •

    $default  accept


State 4

   16 basic: VOID •

    $default  reduce using rule 16 (basic)


State 5

   17 basic: UCHR •

    $default  reduce using rule 17 (basic)


State 6

   18 basic: CHR •

    $default  reduce using rule 18 (basic)


State 7

   20 basic: SRT •

    $default  reduce using rule 20 (basic)


State 8

   19 basic: USRT •

    $default  reduce using rule 19 (basic)


State 9

   22 basic: LNG •

    $default  reduce using rule 22 (basic)


State 10

   21 basic: ULNG •

    $default  reduce using rule 21 (basic)


State 11

   23 basic: UINT •

    $default  reduce using rule 23 (basic)


State 12

   24 basic: INT •

    $default  reduce using rule 24 (basic)


State 13

   25 basic: FLT •

    $default  reduce using rule 25 (basic)


State 14

   26 basic: DBL •

    $default  reduce using rule 26 (basic)


State 15

   10 decl: STRUCT • ID LBRACE _st_push @3 declist RBRACE _width @4 @5 varlist SEMICOLON
   12     | STRUCT • ID LBRACE _st_push @6 declist RBRACE _width SEMICOLON
   15     | STRUCT • ID @7 @8 varlist SEMICOLON

    ID  shift, and go to state 19


State 16

    2 prog: @1 declist •
    4 declist: declist • _M_1 decl

    $end      reduce using rule 2 (prog)
    $default  reduce using rule 41 (_M_1)

    _M_1  go to state 20


State 17

    3 declist: decl •

    $default  reduce using rule 3 (declist)


State 18

    6 decl: basic • _M_1 @2 varlist SEMICOLON

    $default  reduce using rule 41 (_M_1)

    _M_1  go to state 21


State 19

   10 decl: STRUCT ID • LBRACE _st_push @3 declist RBRACE _width @4 @5 varlist SEMICOLON
   12     | STRUCT ID • LBRACE _st_push @6 declist RBRACE _width SEMICOLON
   15     | STRUCT ID • @7 @8 varlist SEMICOLON

    LBRACE  shift, and go to state 22

    $default  reduce using rule 13 (@7)

    @7  go to state 23


State 20

    4 declist: declist _M_1 • decl

    VOID    shift, and go to state 4
    UCHR    shift, and go to state 5
    CHR     shift, and go to state 6
    SRT     shift, and go to state 7
    USRT    shift, and go to state 8
    LNG     shift, and go to state 9
    ULNG    shift, and go to state 10
    UINT    shift, and go to state 11
    INT     shift, and go to state 12
    FLT     shift, and go to state 13
    DBL     shift, and go to state 14
    STRUCT  shift, and go to state 15

    decl   go to state 24
    basic  go to state 18


State 21

    6 decl: basic _M_1 • @2 varlist SEMICOLON

    $default  reduce using rule 5 (@2)

    @2  go to state 25


State 22

   10 decl: STRUCT ID LBRACE • _st_push @3 declist RBRACE _width @4 @5 varlist SEMICOLON
   12     | STRUCT ID LBRACE • _st_push @6 declist RBRACE _width SEMICOLON

    $default  reduce using rule 39 (_st_push)

    _st_push  go to state 26


State 23

   15 decl: STRUCT ID @7 • @8 varlist SEMICOLON

    $default  reduce using rule 14 (@8)

    @8  go to state 27


State 24

    4 declist: declist _M_1 decl •

    $default  reduce using rule 4 (declist)


State 25

    6 decl: basic _M_1 @2 • varlist SEMICOLON

    ID     shift, and go to state 28
    DEREF  shift, and go to state 29

    varlist  go to state 30
    var      go to state 31


State 26

   10 decl: STRUCT ID LBRACE _st_push • @3 declist RBRACE _width @4 @5 varlist SEMICOLON
   12     | STRUCT ID LBRACE _st_push • @6 declist RBRACE _width SEMICOLON

    VOID      reduce using rule 7 (@3)
    VOID      [reduce using rule 11 (@6)]
    UCHR      reduce using rule 7 (@3)
    UCHR      [reduce using rule 11 (@6)]
    CHR       reduce using rule 7 (@3)
    CHR       [reduce using rule 11 (@6)]
    SRT       reduce using rule 7 (@3)
    SRT       [reduce using rule 11 (@6)]
    USRT      reduce using rule 7 (@3)
    USRT      [reduce using rule 11 (@6)]
    LNG       reduce using rule 7 (@3)
    LNG       [reduce using rule 11 (@6)]
    ULNG      reduce using rule 7 (@3)
    ULNG      [reduce using rule 11 (@6)]
    UINT      reduce using rule 7 (@3)
    UINT      [reduce using rule 11 (@6)]
    INT       reduce using rule 7 (@3)
    INT       [reduce using rule 11 (@6)]
    FLT       reduce using rule 7 (@3)
    FLT       [reduce using rule 11 (@6)]
    DBL       reduce using rule 7 (@3)
    DBL       [reduce using rule 11 (@6)]
    STRUCT    reduce using rule 7 (@3)
    STRUCT    [reduce using rule 11 (@6)]
    $default  reduce using rule 7 (@3)

    @3  go to state 32
    @6  go to state 33

    reduce/reduce conflict on tokens VOID, UCHR, CHR, SRT, USRT, LNG, ULNG, UINT, INT, FLT, DBL, STRUCT:
        7 @3: ε •
       11 @6: ε •
      First example: @1 STRUCT ID LBRACE _st_push • VOID _M_1 @2 varlist SEMICOLON RBRACE _width @4 @5 varlist SEMICOLON $end
      First reduce derivation
        $accept
        ↳ 0: prog                                                                                                                                       $end
             ↳ 2: @1 declist
                     ↳ 3: decl
                          ↳ 10: STRUCT ID LBRACE _st_push @3       declist                                        RBRACE _width @4 @5 varlist SEMICOLON
                                                          ↳ 7: ε • ↳ 3: decl
                                                                        ↳ 6: basic      _M_1 @2 varlist SEMICOLON
                                                                             ↳ 16: VOID
      Second example: @1 STRUCT ID LBRACE _st_push • VOID _M_1 @2 varlist SEMICOLON RBRACE _width SEMICOLON $end
      Second reduce derivation
        $accept
        ↳ 0: prog                                                                                                                          $end
             ↳ 2: @1 declist
                     ↳ 3: decl
                          ↳ 12: STRUCT ID LBRACE _st_push @6        declist                                        RBRACE _width SEMICOLON
                                                          ↳ 11: ε • ↳ 3: decl
                                                                         ↳ 6: basic      _M_1 @2 varlist SEMICOLON
                                                                              ↳ 16: VOID



State 27

   15 decl: STRUCT ID @7 @8 • varlist SEMICOLON

    ID     shift, and go to state 28
    DEREF  shift, and go to state 29

    varlist  go to state 34
    var      go to state 31


State 28

   35 var: ID • @13 dim

    $default  reduce using rule 34 (@13)

    @13  go to state 35


State 29

   33 var: DEREF • @11 @12 var

    $default  reduce using rule 31 (@11)

    @11  go to state 36


State 30

    6 decl: basic _M_1 @2 varlist • SEMICOLON
   29 varlist: varlist • COMMA @9 @10 var

    SEMICOLON  shift, and go to state 37
    COMMA      shift, and go to state 38


State 31

   30 varlist: var •

    $default  reduce using rule 30 (varlist)


State 32

   10 decl: STRUCT ID LBRACE _st_push @3 • declist RBRACE _width @4 @5 varlist SEMICOLON

    VOID    shift, and go to state 4
    UCHR    shift, and go to state 5
    CHR     shift, and go to state 6
    SRT     shift, and go to state 7
    USRT    shift, and go to state 8
    LNG     shift, and go to state 9
    ULNG    shift, and go to state 10
    UINT    shift, and go to state 11
    INT     shift, and go to state 12
    FLT     shift, and go to state 13
    DBL     shift, and go to state 14
    STRUCT  shift, and go to state 15

    declist  go to state 39
    decl     go to state 17
    basic    go to state 18


State 33

   12 decl: STRUCT ID LBRACE _st_push @6 • declist RBRACE _width SEMICOLON

    VOID    shift, and go to state 4
    UCHR    shift, and go to state 5
    CHR     shift, and go to state 6
    SRT     shift, and go to state 7
    USRT    shift, and go to state 8
    LNG     shift, and go to state 9
    ULNG    shift, and go to state 10
    UINT    shift, and go to state 11
    INT     shift, and go to state 12
    FLT     shift, and go to state 13
    DBL     shift, and go to state 14
    STRUCT  shift, and go to state 15

    declist  go to state 40
    decl     go to state 17
    basic    go to state 18


State 34

   15 decl: STRUCT ID @7 @8 varlist • SEMICOLON
   29 varlist: varlist • COMMA @9 @10 var

    SEMICOLON  shift, and go to state 41
    COMMA      shift, and go to state 38


State 35

   35 var: ID @13 • dim

    LPN  shift, and go to state 42

    $default  reduce using rule 38 (dim)

    dim  go to state 43


State 36

   33 var: DEREF @11 • @12 var

    $default  reduce using rule 32 (@12)

    @12  go to state 44


State 37

    6 decl: basic _M_1 @2 varlist SEMICOLON •

    $default  reduce using rule 6 (decl)


State 38

   29 varlist: varlist COMMA • @9 @10 var

    $default  reduce using rule 27 (@9)

    @9  go to state 45


State 39

    4 declist: declist • _M_1 decl
   10 decl: STRUCT ID LBRACE _st_push @3 declist • RBRACE _width @4 @5 varlist SEMICOLON

    RBRACE  shift, and go to state 46

    $default  reduce using rule 41 (_M_1)

    _M_1  go to state 20


State 40

    4 declist: declist • _M_1 decl
   12 decl: STRUCT ID LBRACE _st_push @6 declist • RBRACE _width SEMICOLON

    RBRACE  shift, and go to state 47

    $default  reduce using rule 41 (_M_1)

    _M_1  go to state 20


State 41

   15 decl: STRUCT ID @7 @8 varlist SEMICOLON •

    $default  reduce using rule 15 (decl)


State 42

   37 dim: LPN • NUM RPN @14 dim

    NUM  shift, and go to state 48


State 43

   35 var: ID @13 dim •

    $default  reduce using rule 35 (var)


State 44

   33 var: DEREF @11 @12 • var

    ID     shift, and go to state 28
    DEREF  shift, and go to state 29

    var  go to state 49


State 45

   29 varlist: varlist COMMA @9 • @10 var

    $default  reduce using rule 28 (@10)

    @10  go to state 50


State 46

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE • _width @4 @5 varlist SEMICOLON

    $default  reduce using rule 40 (_width)

    _width  go to state 51


State 47

   12 decl: STRUCT ID LBRACE _st_push @6 declist RBRACE • _width SEMICOLON

    $default  reduce using rule 40 (_width)

    _width  go to state 52


State 48

   37 dim: LPN NUM • RPN @14 dim

    RPN  shift, and go to state 53


State 49

   33 var: DEREF @11 @12 var •

    $default  reduce using rule 33 (var)


State 50

   29 varlist: varlist COMMA @9 @10 • var

    ID     shift, and go to state 28
    DEREF  shift, and go to state 29

    var  go to state 54


State 51

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width • @4 @5 varlist SEMICOLON

    $default  reduce using rule 8 (@4)

    @4  go to state 55


State 52

   12 decl: STRUCT ID LBRACE _st_push @6 declist RBRACE _width • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 53

   37 dim: LPN NUM RPN • @14 dim

    $default  reduce using rule 36 (@14)

    @14  go to state 57


State 54

   29 varlist: varlist COMMA @9 @10 var •

    $default  reduce using rule 29 (varlist)


State 55

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width @4 • @5 varlist SEMICOLON

    $default  reduce using rule 9 (@5)

    @5  go to state 58


State 56

   12 decl: STRUCT ID LBRACE _st_push @6 declist RBRACE _width SEMICOLON •

    $default  reduce using rule 12 (decl)


State 57

   37 dim: LPN NUM RPN @14 • dim

    LPN  shift, and go to state 42

    $default  reduce using rule 38 (dim)

    dim  go to state 59


State 58

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width @4 @5 • varlist SEMICOLON

    ID     shift, and go to state 28
    DEREF  shift, and go to state 29

    varlist  go to state 60
    var      go to state 31


State 59

   37 dim: LPN NUM RPN @14 dim •

    $default  reduce using rule 37 (dim)


State 60

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width @4 @5 varlist • SEMICOLON
   29 varlist: varlist • COMMA @9 @10 var

    SEMICOLON  shift, and go to state 61
    COMMA      shift, and go to state 38


State 61

   10 decl: STRUCT ID LBRACE _st_push @3 declist RBRACE _width @4 @5 varlist SEMICOLON •

    $default  reduce using rule 10 (decl)
